--- a/aplicasion/publico/stylesheet/bienvenida.css
+++ b/aplicasion/publico/stylesheet/bienvenida.css
@@ -1,9 +1,62 @@
+html{
+  font-size: 12px !important;
+}
+body{
+  background: rgba(14, 97, 62, 0.95);
+
+}
+nav .brand-logo {
+    position: absolute;
+    color: #fff;
+    display: inline-block;
+    font-size: 1.1rem;
+    padding: 0;
+    white-space: nowrap;
+}
+
 .form-log{
   background:rgba(0, 0, 0, 0.61);
-  margin: 2em;
-  border-radius: 12px;
+/*  border-radius: 12px;*/
   color: #fff;
+}
+footer.page-footer {
+    margin-top: -20px !important;
+    padding-top: 20px;
+    background-color: #ee6e73;
 }
 .logo{
   padding-top: 10em;
+}
+
+.body-gnv{
+  /*background-image: url('/imagenes/body-gnv1.jpg');*/
+  padding-top: 2em;
+  padding-bottom:2em;
+  background: rgba(45, 42, 42, 0.38);
+
+}
+/*@media (max-width: 1200px) {
+  .form-log {
+    background:rgba(0, 0, 0, 0.61);
+    border-radius: 12px;
+    margin: 2em 0em 0 0em;
+    color: #fff;
+  }
+}*/
+@media only screen and (min-width: 601px) {
+  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+    height: 32px !important;
+    line-height: 32px !important;
+  }
+  .navbar-fixed {
+    height: 64px;
+  }
+  nav .brand-logo {
+      position: absolute;
+      color: #fff;
+      display: inline-block;
+      font-size: 1.1rem !important;
+      padding: 0;
+      white-space: nowrap;
+  }
 }
