--- a/aplicasion/vistas/principal/index.ejs
+++ b/aplicasion/vistas/principal/index.ejs
@@ -11,91 +11,119 @@
   </style>
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet/bienvenida.css">
-  <link rel="stylesheet" href="stylesheet/bienvenida.css">
   <link rel="stylesheet" href="materialize-css/bin/materialize.css">
 
   <body>
-    <div class="">
-      <div class="col s12 logo">
-
-      </div>
-      <nav class="orange darken-3">
+    <nav class="teal darken-3">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Logo</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sass</a></li>
             <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
           </ul>
         </div>
-      </nav>
-      <div class="">
-        <div class="row">
-          <div class="col s4"></div>
-          <div class="col s4" style="padding:0 4.5em;">
+    </nav>
+    <div class="container">
+      <div class="row body-gnv">
+        <div class="col s12 m4 l4"></div>
+        <div class="form-log col s12 m4 l4">
+          <form id="form-logueo" class="s12 m12 l12" action="#">
+            <div class="row" style="">
+              <div class="input-field col s12 m12 l12" style="text-align:center;padding-top:10px;">
+                <i class="material-icons" style="font-size: 77px;">account_circle</i>
+              </div>
+              <div class="input-field col s12 m12 l12" style="">
+                <i class="material-icons prefix">perm_identity</i>
+                <!-- <label for="user">usuario requiere 2 caracteres como minimo</label> -->
+                <input id="user" name="user" type="text" data-error=".errorTxt1">
+                <label for="user">usuario</label>
+              </div>
+              <div class="input-field col s12 m12 l12">
+                <i class="material-icons prefix">lock</i>
+                <input id="password" type="text" class="validate">
+                <label for="password">contraseña</label>
+              </div>
+              <div class="col s12 m12 l12"  style="text-align: center;">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Ingresar
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col s12 m4 l4">
+        </div>
+      </div>
+      <div class="row">
+        <footer class="page-footer teal darken-3">
+          <div class="container">
             <div class="row">
-              <div class="">
-                <form class="col s12">
-                  <div class="row form-log">
-                    <div class="col s12">
-                      <i class="material-icons md-48">perm_identity</i>
-                    </div>
-
-                    <div class="input-field col s12" style="">
-                      <i class="material-icons prefix">account_circle</i>
-                      <input id="icon_prefix" type="text" class="validate">
-                      <label for="icon_prefix">usuario</label>
-                    </div>
-                    <div class="input-field col s12">
-                      <i class="material-icons prefix">account_circle</i>
-                      <input id="icon_prefix" type="text" class="validate">
-                      <label for="icon_prefix">contraseña</label>
-                    </div>
-                    <div class="col s12">
-                      <div class="row text-center">
-                        <div class="col s12" style="text-align: center;">
-                          <button class="btn waves-effect waves-light" type="submit" name="action">Ingresar
-                            <i class="material-icons right">send</i>
-                          </button>
-                        </div>
-
-                      </div>
-                    </div>
-                  </div>
-                </form>
+              <div class="col l6 s12 m12 l12">
+                <h5 class="white-text">Universidad Autonoma Juan Misael Saracho</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12 m12 l12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
               </div>
             </div>
           </div>
-          <div class="col s4"></div>
-        </div>
+          <div class="footer-copyright">
+            <div class="container">
+              © 2017 Grupo GNV
+              <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+
       </div>
-      <footer class="page-footer orange darken-3">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-          </div>
-        </div>
-      </footer>
-    <div>
+    </div>
   </body>
   <script type="text/javascript" src="jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="materialize-css/bin/materialize.js"></script>
+  <script type="text/javascript" src="jquery-validation/dist/jquery.validate.js"></script>
+  <script type="text/javascript">
+     $(".button-collapse").sideNav();
+    //  $(document).ready(function(){
+       $('#form-logueo').validate({
+         rules:{
+           user: {
+             required: true,
+             minlength: 5,
+          }
+         },
+         messages:{
+           user:{
+             required: "Enter a username",
+             minlength: "Enter at least {0} characters",
+            //  remote: jQuery.format("{0} is already in use")
+           }
+         },
+         errorElement : 'div',
+         errorPlacement: function(error, element) {
+            var placement = $(element).data('error');
+            if (placement) {
+              $(placement).append(error)
+            } else {
+              error.insertAfter(element);
+            }
+         }
+       })
+    //  })
+
+  </script>
 </html>
